--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,11 @@ plugins {
 
 node {
 	download = true
-	version = "9.11.1"
-	npmVersion = "5.6.0"
+	version = "18.12.1"
+	npmVersion = "9.2.0"
+	// version = "9.11.1"
+	// npmVersion = "5.6.0"
+
 }
 
 //declare a build task
